apps/media-services/jellyfin/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: jellyfin-stripprefix
  namespace: media
spec:
  stripPrefix:
    prefixes:
      - /jellyfin
