apps/media-services/jellyfin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media-services
  labels:
    name: media-services
