apps/media-services/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
  labels:
    app: jellyfin
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin:latest
        ports:
        - containerPort: 8096
          name: http
        - containerPort: 7359
          name: discovery
          protocol: UDP
        - containerPort: 1900
          name: upnp
          protocol: UDP
        resources:
          limits:
            cpu: "2"
            memory: "4Gi"
          requests:
            cpu: "125m"
            memory: "1Gi"
        securityContext:
          privileged: true
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
        - name: dev-dri
          mountPath: /dev/dri
        - name: dev-nvidia0
          mountPath: /dev/nvidia0
        - name: dev-nvidiactl
          mountPath: /dev/nvidiactl
        - name: dev-nvidia-modeset
          mountPath: /dev/nvidia-modeset
        - name: dev-nvidia-uvm
          mountPath: /dev/nvidia-uvm
        - name: dev-nvidia-uvm-tools
          mountPath: /dev/nvidia-uvm-tools
        - name: nvidia-libs
          mountPath: /opt/nvidia/lib
          readOnly: true
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config
      - name: media
        hostPath:
          path: /mnt/data
          type: Directory
      - name: dev-dri
        hostPath:
          path: /dev/dri
          type: Directory
      - name: dev-nvidia0
        hostPath:
          path: /dev/nvidia0
      - name: dev-nvidiactl
        hostPath:
          path: /dev/nvidiactl
      - name: dev-nvidia-modeset
        hostPath:
          path: /dev/nvidia-modeset
      - name: dev-nvidia-uvm
        hostPath:
          path: /dev/nvidia-uvm
      - name: dev-nvidia-uvm-tools
        hostPath:
          path: /dev/nvidia-uvm-tools
      - name: nvidia-libs
        hostPath:
          path: /usr/lib/x86_64-linux-gnu
          type: Directory
      - name: network-seed
        configMap:
          name: jellyfin-network-config
      - name: xml-overrides
        configMap:
          name: jellyfin-config
          items:
          - key: "network.xml_NetworkConfiguration_BaseUrl"
            path: "network.xml_NetworkConfiguration_BaseUrl"
          - key: "network.xml_NetworkConfiguration_EnableHttps"
            path: "network.xml_NetworkConfiguration_EnableHttps"
          - key: "network.xml_NetworkConfiguration_RequireHttps"
            path: "network.xml_NetworkConfiguration_RequireHttps"
          - key: "network.xml_NetworkConfiguration_AutoDiscovery"
            path: "network.xml_NetworkConfiguration_AutoDiscovery"
          - key: "network.xml_NetworkConfiguration_EnableUPnP"
            path: "network.xml_NetworkConfiguration_EnableUPnP"
          - key: "network.xml_NetworkConfiguration_EnableIPv4"
            path: "network.xml_NetworkConfiguration_EnableIPv4"
          - key: "network.xml_NetworkConfiguration_EnableIPv6"
            path: "network.xml_NetworkConfiguration_EnableIPv6"
          - key: "network.xml_NetworkConfiguration_EnableRemoteAccess"
            path: "network.xml_NetworkConfiguration_EnableRemoteAccess"
          - key: "network.xml_NetworkConfiguration_IgnoreVirtualInterfaces"
            path: "network.xml_NetworkConfiguration_IgnoreVirtualInterfaces"
          - key: "network.xml_NetworkConfiguration_EnablePublishedServerUriByRequest"
            path: "network.xml_NetworkConfiguration_EnablePublishedServerUriByRequest"
          - key: "network.xml_NetworkConfiguration_IsRemoteIPFilterBlacklist"
            path: "network.xml_NetworkConfiguration_IsRemoteIPFilterBlacklist"
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
  labels:
    app: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
  - name: http
    port: 80
    targetPort: 8096
    protocol: TCP
  - name: discovery
    port: 7359
    targetPort: 7359
    protocol: UDP
  - name: upnp
    port: 1900
    targetPort: 1900
    protocol: UDP
  type: ClusterIP
